@@ -1,3 +1,7 @@
+2005-03-11  Per Bothner  <per@bothner.com>
+
+	* Language.java (defProcStFld): Call FieldLocation's setProcedure.
+
 2005-03-07  Per Bothner  <per@bothner.com>
 
 	* Language.java: Merge in remaining methods from Interpreter.
